Prog läuft - Kunde kann angelegt werden, Stunde speichern klappt noch nicht.